Seats From UI. Fix price list.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <option value="10">Avengers: EndGame ($10)</option>
         <option value="12">Joker ($12)</option>
         <option value="8">Toy Story ($8)</option>
-        <option value="9">The Lion King ($9u)</option>
+        <option value="9">The Lion King ($9)</option>
       </select>
     </div>
 
@@ -109,7 +109,6 @@
         >0</span
       >
     </p>
-    <!-- test new branch -->
     <script src="script.js"></script>
   </body>
 </html>
